--- a/src/app/components/buyer/buyer.component.html
+++ b/src/app/components/buyer/buyer.component.html
@@ -3,11 +3,11 @@
     <div class="max-w-4xl mx-auto text-center px-4">
         <h1 class="text-4xl md:text-5xl font-bold mb-4">Gestión de Compradores</h1>
         <p class="text-lg text-gray-600">Gestiona la administración de los compradores.</p>
-        <button *ngIf="!viewForm"
+        <!-- <button *ngIf="!viewForm"
             class="mt-6 bg-blue-600 hover:bg-blue-700 text-white text-lg font-medium py-3 px-6 rounded"
             (click)="viewFormCreate()">
             <i class="fa-solid fa-plus mr-2"></i> Crear Comprador
-        </button>
+        </button> -->
     </div>
 </div>
 
@@ -69,7 +69,8 @@
         <h3 class="text-center text-2xl font-bold mb-6">Formulario de Comprador</h3>
 
         <div class="mb-5">
-            <label for="document" class="block font-medium mb-1">Número de Documento</label>
+            <label for="document" class="block font-medium mb-1">Número de Documento <span
+                class="text-red-400">*</span></label>
             <input type="text" formControlName="document" placeholder="Número de Documento"
                 class="w-full border rounded px-4 py-2 focus:outline-none focus:ring"
                 [ngClass]="{'border-red-500': buyerForm.get('document')?.invalid && (buyerForm.get('document')?.touched || buyerForm.get('document')?.dirty)}">
@@ -79,7 +80,8 @@
         </div>
 
         <div class="mb-5">
-            <label for="first_name" class="block font-medium mb-1">Primer Nombre</label>
+            <label for="first_name" class="block font-medium mb-1">Primer Nombre <span
+                class="text-red-400">*</span></label>
             <input type="text" formControlName="first_name" placeholder="Primer Nombre"
                 class="w-full border rounded px-4 py-2 focus:outline-none focus:ring"
                 [ngClass]="{'border-red-500': buyerForm.get('first_name')?.invalid && (buyerForm.get('first_name')?.touched || buyerForm.get('first_name')?.dirty)}">
@@ -111,13 +113,15 @@
         </div>
 
         <div class="mb-5">
-            <label for="phone" class="block font-medium mb-1">Teléfono</label>
+            <label for="phone" class="block font-medium mb-1">Teléfono <span
+                class="text-red-400">*</span></label>
             <input type="text" formControlName="phone" placeholder="Número Telefónico"
                 class="w-full border rounded px-4 py-2 focus:outline-none focus:ring">
         </div>
 
         <div class="mb-6">
-            <label for="email" class="block font-medium mb-1">Correo Electrónico</label>
+            <label for="email" class="block font-medium mb-1">Correo Electrónico <span
+                class="text-red-400">*</span></label>
             <input type="email" formControlName="email" placeholder="Correo Electrónico"
                 class="w-full border rounded px-4 py-2 focus:outline-none focus:ring"
                 [ngClass]="{'border-red-500': buyerForm.get('email')?.invalid && (buyerForm.get('email')?.touched || buyerForm.get('email')?.dirty)}">
