--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -18,7 +18,6 @@
 
 <div class="max-w-6xl mx-auto my-10" *ngIf="!viewForm && principalView">
     <h3 class="text-center text-xl font-bold mb-6">Productos Registrados</h3>
-
     <div class="flex justify-center items-center pt-4" *ngIf="loadingTable">
         <i class="fa-solid fa-spinner fa-spin fa-2xl text-blue-600"></i>
     </div>
@@ -60,10 +59,10 @@
     </div>
 </div>
 
-
-<div class="max-w-6xl mx-auto my-10" *ngIf="!viewForm && !principalView">
+<!-- Productos mas comprados -->
+<div class="mx-12 my-10" *ngIf="!viewForm && !principalView">
     <h3 class="text-center text-xl font-bold mb-6">Productos más comprados</h3>
-    <button (click)="principalView = true" class="mb-4 text-blue-500 hover:text-blue-700">
+    <button (click)="returnView()" class="mb-4 text-blue-500 hover:text-blue-700">
         <i class="fas fa-arrow-left mr-2"></i> Atrás
     </button>
     <div class="flex justify-center items-center pt-4" *ngIf="loadingTable">
@@ -79,6 +78,7 @@
                     <th class="py-3 px-4 font-semibold">Descripción</th>
                     <th class="py-3 px-4 font-semibold">Precio</th>
                     <th class="py-3 px-4 font-semibold">Stock</th>
+                    <th class="py-3 px-4 font-semibold">Unidades vendidas</th>
                     <th class="py-3 px-4 font-semibold">Acciones</th>
                 </tr>
             </thead>
@@ -91,6 +91,7 @@
                     <td class="py-3 px-4">{{ item.description || 'No disponible' }}</td>
                     <td class="py-3 px-4">${{ item.price | number: '1.2-2' }}</td>
                     <td class="py-3 px-4">{{ item.stock }}</td>
+                    <td class="py-3 px-4">{{ item.total_units_sold }}</td>
                     <td class="py-3 px-4 space-x-2">
                         <button
                             class="text-yellow-600 border border-yellow-400 hover:bg-yellow-100 px-3 py-1 rounded text-sm"
