--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -399,7 +399,7 @@
             </div>
         </form>
         <div class="my-6 flex justify-between">
-            <button (click)="prevStep()"
+            <button (click)="goBack()"
                 class="bg-gray-600 text-white py-2 px-6 rounded-lg shadow-md hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-500 transition duration-300">
                 Anterior
             </button>
